<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hd_wallpaper_dice_black_dices_gold_tumblr"
    tools:context=".NewGame">

    <Button
        android:id="@+id/throwDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="155dp"
        android:layout_marginTop="570dp"
        android:text="@string/throwDice"
        android:textSize="21sp"
        android:backgroundTint="@color/btn_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="570dp"
        android:text="@string/target"
        android:textSize="21sp"
        android:backgroundTint="@color/btn_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="285dp"
        android:layout_marginTop="570dp"
        android:text="@string/score"
        android:textSize="21sp"
        android:backgroundTint="@color/btn_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/player"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="370dp"
        android:text="@string/computer"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerDice1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerDice2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerDice3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="170dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerDice4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/playerDice5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="330dp"
        android:layout_marginTop="240dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerDice1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="430dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerDice2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="430dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerDice3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="170dp"
        android:layout_marginTop="430dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerDice4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="430dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computerDice5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="330dp"
        android:layout_marginTop="430dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/empty_dice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="190dp"
        android:layout_marginTop="20dp"
        android:text="@string/player_score"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="370dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="190dp"
        android:layout_marginTop="60dp"
        android:text="@string/computer_score"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="370dp"
        android:layout_marginTop="60dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--show number of wins for human and computer-->
    <TextView
        android:id="@+id/showWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/wins"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/target_101"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>